--- a/views/index.ejs
+++ b/views/index.ejs
@@ -83,7 +83,7 @@
 
     <div class="container">
       <div class="jumbotron">
-        <h1 class="display-4">Welcome to <%= title %></h1>
+        <h1 class="display-4"><%= title %></h1>
         <p class="lead">
           This is a simple hero unit, a simple jumbotron-style component for
           calling extra attention to featured content or information.
