--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
             <% } %>
 
             <a class="nav-link" href="/"
-              ><i class="far fa-home"></i> Home
+              ><i class="fas fa-house-damage"></i> Home
               <span class="sr-only">(current)</span></a
             >
           </li>
@@ -44,7 +44,7 @@
             <% } %>
 
             <a class="nav-link" href="/about"
-              ><i class="fas fa-chess-pawn"></i> About</a
+              ><i class="fab fa-meetup"></i> About</a
             >
           </li>
 
@@ -54,7 +54,7 @@
             <% } %>
 
             <a class="nav-link" href="/products"
-              ><i class="fa fa-lg fa-briefcase"></i> Products</a
+              ><i class="fab fa-product-hunt"></i> Products</a
             >
           </li>
 
@@ -64,7 +64,7 @@
             <% } %>
 
             <a class="nav-link" href="/services"
-              ><i class="fa fa-lg fa-birthday-cake"></i> Services</a
+              ><i class="fab fa-servicestack"></i> Services</a
             >
           </li>
 
@@ -74,7 +74,7 @@
             <% } %>
 
             <a class="nav-link" href="/contact"
-              ><i class="fa fa-lg fa-phone"></i> Contact</a
+              ><i class="fas fa-file-contract"></i> Contact</a
             >
           </li>
         </ul>
