--- a/views/contacts/index.ejs
+++ b/views/contacts/index.ejs
@@ -3,7 +3,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-offset-3 col-md-6">
-                <h1><%= title %></h1>
+                <h1><%= title %></h1><br>
+                <a class="btn btn-primary" href="/contact-list/add" role="button">
+         <i class="fa fa-plus-circle" aria-hidden="true"></i>Add a Contact</a><br>
                 <br>
                 <table class="table table-bordered table-striped table-hover">
                     <!-- Header Row-->
