--- a/views/contacts/add.ejs
+++ b/views/contacts/add.ejs
@@ -1,7 +1,43 @@
 <% include ../partials/header.ejs %>
 
+<div class="container">
+    <div class="row">
+        <div class="col-md-offset-3 col-md-6">
+        <h1><%= title %></h1>
+        <form action="" method="post">
+            <div class="form-group">
+                <label for="FirstNameTextFeild">First Name</label>
+                <input type="text" class="form-control" 
+                id="FirstNameTextField"
+             placeholder="Enter First name"
+            name="firstName"
+            required>
+        </div >
+        <div class="form-group">
+                <label for="LasttNameTextFeild">Last Name</label>
+                <input type="text" class="form-control" 
+                id="LastNameTextField"
+             placeholder="Enter Last name"
+            name="lastName"
+            required>
+        </div >
+        <div class="form-group">
+                <label for="AgeTextFeild">Age</label>
+                <input type="text" class="form-control" 
+                id="AgeTextField"
+             placeholder="Enter Age "
+            name="age"
+            required>
+        </div >
+        <button type="submit" class="btn btn-primary">
+  <i class="fa fa-edit"></i> Submit</button>         
+        </form>
+    </div>
+</div>
+</div>
 
-<h1>
-<%= title %>
-</h1>
+
+
+
+
 <% include ../partials/footer.ejs %>
