added eit and delete

--- a/views/contacts/edit.ejs
+++ b/views/contacts/edit.ejs
@@ -1,5 +1,5 @@
 <% include ../partials/header.ejs %>
-
+<!--Content for edit page-->
 <div class="container">
     <div class="row">
         <div class="col-md-offset-3 col-md-6">
@@ -11,6 +11,7 @@
                 id="FirstNameTextField"
              placeholder="Enter First name"
             name="firstName"
+            value="<%= contact.firstName%>"
             required>
         </div >
         <div class="form-group">
@@ -19,6 +20,7 @@
                 id="LastNameTextField"
              placeholder="Enter Last name"
             name="lastName"
+            value="<%= contact.lastName%>"
             required>
         </div >
         <div class="form-group">
@@ -27,6 +29,7 @@
                 id="AgeTextField"
              placeholder="Enter Age "
             name="age"
+            value="<%= contact.age%>"
             required>
         </div >
         <button type="submit" class="btn btn-primary">
